# AceTrace

./: .gitignore  CMakeLists.txt  README.md
boot/m8xt4m/: Makefile  avrdude.conf  m8xt4m.S  m8xt4m.hex
include/: lora.h  pt.h  spi_master.h  trace.h
src/: lora.c  spi_master.c  trace.c
test/: CMakeLists.txt  avr-gcc.cmake  main.c
